--- a/src/Microservices/BanHistory/BanHistoryMicroservice.Api/appsettings.Production.json
+++ b/src/Microservices/BanHistory/BanHistoryMicroservice.Api/appsettings.Production.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Database:ConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=BanHistoryMicroservice",
+  "Database:ConnectionString": "Server=postgres-banhistory-microservice;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=BanHistoryMicroservice",
   "RabbitMQ:User": "gen_user",
   "RabbitMQ:Password": "zPJaTQ1BIeY0cf",
   "RabbitMQ:HostName": "103.74.93.48"
