--- a/src/Microservices/User/UserMicroservie.Api/appsettings.Production.json
+++ b/src/Microservices/User/UserMicroservie.Api/appsettings.Production.json
@@ -6,7 +6,7 @@
     }
   },
   "Database": {
-    "ConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=UserMicroservice"
+    "ConnectionString": "Server=postgres-user-microservice;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=UserMicroservice"
   },
   "RabbitMQ:User": "gen_user",
   "RabbitMQ:Password": "zPJaTQ1BIeY0cf",
