Update microservices' connections to rabbitmq and postgres

--- a/src/Microservices/BanHistory/BanHistoryMicroservice.Api/appsettings.Development.json
+++ b/src/Microservices/BanHistory/BanHistoryMicroservice.Api/appsettings.Development.json
@@ -8,5 +8,6 @@
   "Database:ConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=BanHistoryMicroservice",
   "RabbitMQ:User": "rmuser",
   "RabbitMQ:Password": "rmpassword",
-  "RabbitMQ:HostName": "rabbitmq"
+  "RabbitMQ:HostName": "rabbitmq",
+  "RabbitMQ:VirtualHost": "/"
 }
