--- a/src/Microservices/Discussion/DiscussionMicroservice.Api/appsettings.Development.json
+++ b/src/Microservices/Discussion/DiscussionMicroservice.Api/appsettings.Development.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Database:ConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=DiscussionMicroservice",
+  "Database:ConnectionString": "Server=176.124.212.94;Port=5432;User id=postgres;password=postgres;database=DiscussionMicroservice",
   "RabbitMQ:User": "rmuser",
   "RabbitMQ:Password": "rmpassword",
-  "RabbitMQ:HostName": "rabbitmq"
+  "RabbitMQ:HostName": "rabbitmq",
+  "RabbitMQ:VirtualHost": "/"
 }
