--- a/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Development.json
+++ b/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "Kestrel:Certificates:Development:Password": "08c8a485-4361-4e1b-a3aa-a6cb0bdd9cc9",
+  "Jwt:Secret": "2cd53c00-386e-4194-9dc2-d9931a37a672",
   "Database:ConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=RegisterMicroservice",
   "Database:HangfireConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=Hangfire",
   "Email:CompanyName": "Forumium",
@@ -17,5 +18,6 @@
   "Email:From": "11aaaaqa@gmail.com",
   "RabbitMQ:User": "rmuser",
   "RabbitMQ:Password": "rmpassword",
-  "RabbitMQ:HostName": "rabbitmq"
+  "RabbitMQ:HostName": "rabbitmq",
+  "RabbitMQ:VirtualHost": "/"
 }
