--- a/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Production.json
+++ b/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Production.json
@@ -7,8 +7,9 @@
   },
   "AllowedHosts": "*",
   "Kestrel:Certificates:Development:Password": "08c8a485-4361-4e1b-a3aa-a6cb0bdd9cc9",
-  "Database:ConnectionString": "Server=postgres-register-microservice;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=RegisterMicroservice",
-  "Database:HangfireConnectionString": "Server=postgres-hangfire;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=Hangfire",
+  "Jwt:Secret": "2cd53c00-386e-4194-9dc2-d9931a37a672",
+  "Database:ConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=RegisterMicroservice",
+  "Database:HangfireConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=Hangfire",
   "Email:CompanyName": "Forumium",
   "Email:UserName": "11aaaaqa@gmail.com",
   "Email:Smtp": "smtp.gmail.com",
@@ -17,5 +18,6 @@
   "Email:From": "11aaaaqa@gmail.com",
   "RabbitMQ:User": "gen_user",
   "RabbitMQ:Password": "zPJaTQ1BIeY0cf",
-  "RabbitMQ:HostName": "103.74.93.48"
+  "RabbitMQ:HostName": "103.74.93.48",
+  "RabbitMQ:VirtualHost": "default_vhost"
 }
