--- a/src/Microservices/Report/ReportMicroservice/appsettings.Development.json
+++ b/src/Microservices/Report/ReportMicroservice/appsettings.Development.json
@@ -8,5 +8,6 @@
   "Database:ConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=ReportMicroservice",
   "RabbitMQ:User": "rmuser",
   "RabbitMQ:Password": "rmpassword",
-  "RabbitMQ:HostName": "rabbitmq"
+  "RabbitMQ:HostName": "rabbitmq",
+  "RabbitMQ:VirtualHost": "/"
 }
