--- a/src/Microservices/Report/ReportMicroservice/appsettings.Production.json
+++ b/src/Microservices/Report/ReportMicroservice/appsettings.Production.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Database:ConnectionString": "Server=postgres-report-microservice;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=ReportMicroservice",
+  "Database:ConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=ReportMicroservice",
   "RabbitMQ:User": "gen_user",
   "RabbitMQ:Password": "zPJaTQ1BIeY0cf",
-  "RabbitMQ:HostName": "103.74.93.48"
+  "RabbitMQ:HostName": "103.74.93.48",
+  "RabbitMQ:VirtualHost": "default_vhost"
 }
