--- a/src/Microservices/User/UserMicroservie.Api/appsettings.Development.json
+++ b/src/Microservices/User/UserMicroservie.Api/appsettings.Development.json
@@ -10,5 +10,6 @@
   },
   "RabbitMQ:User": "rmuser",
   "RabbitMQ:Password": "rmpassword",
-  "RabbitMQ:HostName": "rabbitmq"
+  "RabbitMQ:HostName": "rabbitmq",
+  "RabbitMQ:VirtualHost": "/"
 }
