--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,21 @@ services:
          context: .
          dockerfile: src/Web/Web.MVC/Web.MVC/Dockerfile
        labels:
-         - traefik.enable=true
-         - traefik.http.routers.web-mvc-http.rule=Host(`forumium.site`)
-         - traefik.http.routers.web-mvc-http.entrypoints=web
-         - traefik.http.routers.web-mvc-https.tls=true
-         - traefik.http.routers.web-mvc-https.tls.certresolver=cloudflare
-         - traefik.http.routers.web-mvc-https.entrypoints=websecure
-         - traefik.http.routers.web-mvc-https.rule=Host(`forumium.site`)
+        - traefik.enable=true
+        - traefik.http.routers.web-http.rule=Host(`forumium.site`)
+        - traefik.http.routers.web-http.entrypoints=web
+        - traefik.http.routers.web-https.tls=true
+        - traefik.http.routers.web-https.tls.certresolver=cloudflare
+        - traefik.http.routers.web-https.entrypoints=websecure
+        - traefik.http.routers.web-https.rule=Host(`forumium.site`)
        environment:
          - ASPNETCORE_ENVIRONMENT=Production
        depends_on:
          - register-microservice-api
          - gateway-api
-         # - nginx
-         # - grafana
-         # - prometheus
-    
+         - grafana
+         - prometheus
+
     gateway-api:
       image: ${DOCKER_REGISTRY-}gateway-api
       build:
@@ -330,53 +329,58 @@ services:
             - 15672:15672
             - 5672:5672
 
-    # prometheus:
-    #   image: prom/prometheus:latest
-    #   container_name: prometheus
-    #   ports:
-    #     - 9090:9090
-    #   command:
-    #     - --config.file=/etc/prometheus/prometheus.yml
-    #   volumes:
-    #     - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
-    #     - prometheus-data:/prometheus
+    prometheus:
+      image: prom/prometheus:latest
+      container_name: prometheus
+      labels:
+        - traefik.enable=true
+        - traefik.http.routers.prometheus-http.rule=Host(`prometheus.forumium.site`)
+        - traefik.http.routers.prometheus-http.entrypoints=web
+        - traefik.http.routers.prometheus-https.tls=true
+        - traefik.http.routers.prometheus-https.tls.certresolver=cloudflare
+        - traefik.http.routers.prometheus-https.entrypoints=websecure
+        - traefik.http.routers.prometheus-https.rule=Host(`prometheus.forumium.site`)
+        - traefik.http.routers.prometheus-http.middlewares=prometheus-auth
+        - traefik.http.routers.prometheus-https.middlewares=prometheus-auth
+        - traefik.http.middlewares.prometheus-auth.basicauth.users=admin:$$2a$$12$$A2qDaFCJUbcOiuKzrEnbuOkKjApCWGg68W8rvaEn/O19dolJ5K3HG
+      command:
+        - --config.file=/etc/prometheus/prometheus.yml
+      volumes:
+        - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+        - prometheus-data:/prometheus
 
-    # grafana:
-    #   image: grafana/grafana-enterprise
-    #   container_name: grafana
-    #   restart: unless-stopped
-    #   ports:
-    #     - '3000:3000'
-    #   environment:
-    #     - GF_DATABASE_TYPE=postgres
-    #     - GF_DATABASE_HOST=176.124.212.94
-    #     - GF_DATABASE_NAME=DicussionForumGrafana
-    #     - GF_DATABASE_USER=gen_user
-    #     - GF_DATABASE_PASSWORD=GQvo37QnTm61n
-    #   volumes:
-    #     - grafana-data:/var/lib/grafana
+    grafana:
+      image: grafana/grafana-enterprise
+      container_name: grafana
+      restart: unless-stopped
+      labels:
+        - traefik.enable=true
+        - traefik.http.routers.grafana-http.rule=Host(`grafana.forumium.site`)
+        - traefik.http.routers.grafana-http.entrypoints=web
+        - traefik.http.routers.grafana-https.tls=true
+        - traefik.http.routers.grafana-https.tls.certresolver=cloudflare
+        - traefik.http.routers.grafana-https.entrypoints=websecure
+        - traefik.http.routers.grafana-https.rule=Host(`grafana.forumium.site`)
+      environment:
+        - GF_DATABASE_TYPE=postgres
+        - GF_DATABASE_HOST=176.124.212.94
+        - GF_DATABASE_NAME=DicussionForumGrafana
+        - GF_DATABASE_USER=gen_user
+        - GF_DATABASE_PASSWORD=GQvo37QnTm61n
+        - GF_SECURITY_ADMIN_USER=admin
+        - GF_SECURITY_ADMIN_PASSWORD=7Bhq9Hvu45hM
+      volumes:
+        - grafana-data:/var/lib/grafana
 
-    # postgres-grafana:
-    #   image: postgres:latest
-    #   container_name: postgres-grafana
-    #   environment:
-    #     - POSTGRES_DB=DicussionForumGrafana
-    #     - POSTGRES_USER=gen_user
-    #     - POSTGRES_PASSWORD=GQvo37QnTm61n
-    #   volumes:
-    #     - postgres-grafana-data:/var/lib/postgresql/data
-
-    # nginx: 
-    #   image: nginx:latest
-    #   container_name: nginx
-    #   restart: unless-stopped
-    #   volumes:
-    #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    #     - ./nginx/cert.crt:/etc/nginx/cert.crt
-    #     - ./nginx/cert.rsa:/etc/nginx/cert.rsa
-    #   ports:
-    #     - 7315:80
-    #     - 7316:443
+    postgres-grafana:
+      image: postgres:latest
+      container_name: postgres-grafana
+      environment:
+        - POSTGRES_DB=DicussionForumGrafana
+        - POSTGRES_USER=gen_user
+        - POSTGRES_PASSWORD=GQvo37QnTm61n
+      volumes:
+        - postgres-grafana-data:/var/lib/postgresql/data
       
     traefik:
       image: traefik:latest
@@ -384,7 +388,7 @@ services:
       ports:
         - "80:80"
         - "443:443"
-        - "8080:8080"
+        # - "8080:8080"
       environment:
         - CF_DNS_API_TOKEN=${CF_DNS_API_TOKEN}
       volumes:
