--- a/src/Microservices/User/UserMicroservie.Api/appsettings.Production.json
+++ b/src/Microservices/User/UserMicroservie.Api/appsettings.Production.json
@@ -6,10 +6,10 @@
     }
   },
   "Database": {
-    "ConnectionString": "Server=176.124.212.94;Port=5432;User id=gen_user;password=GQvo37QnTm61n;database=UserMicroservice"
+    "ConnectionString": "Server=d293f6350ae6810ca35a2783.twc1.net;Port=5432;User id=gen_user;password=SxjYtQ4vdG6;database=UserMicroservice"
   },
   "RabbitMQ:User": "gen_user",
-  "RabbitMQ:Password": "zPJaTQ1BIeY0cf",
-  "RabbitMQ:HostName": "103.74.93.48",
+  "RabbitMQ:Password": "S6PWcaShQ",
+  "RabbitMQ:HostName": "89.169.46.80",
   "RabbitMQ:VirtualHost": "default_vhost"
 }
